# py-fastapi

./: .gitignore  books.py  books2.py  main.py  pyproject.toml
TodoApp/: main.py
TodoApp/routers/: auth.py  todos.py
